Capes rewritten, reload cape fixed